<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/taskDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <CheckBox
                android:id="@+id/taskDetailsCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/task_id"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/taskDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/detail_task_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/delete_task"
                android:contentDescription="borrar"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/taskDetailsStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_completed_task"
            app:layout_constraintTop_toBottomOf="@id/taskDetails"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/TasksLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/viewCompletedTasksButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_button"
                android:textSize="18sp"
                android:backgroundTint="@color/purple_200"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
